scss/mixins/_activity.scss
@import "../modules/_colors";
@import "../modules/_fonts";

$bottom_margin: 16;
$h2_top_margin: 20;

@mixin activity-author($avatar_size: 32){
  div.user-avatar-img-container {
    float: left;
    margin-right: 16px;
  }

  @include user-profile($avatar_size);

  div.name {
    overflow: hidden;
    text-overflow: ellipsis;
    @include avenir_H();
    color: $carrot_dark_gray;
    font-size: 15px;
    white-space: nowrap;
  }

  div.time-since {
    overflow: hidden;
    text-overflow: ellipsis;
    @include avenir_M();
    color: $carrot_light_gray_3;
    font-size: 12px;
    white-space: nowrap;

    div.tooltip {
      .tooltip-inner {
        white-space:pre-wrap;
        max-width: none;
        text-align: center;
      }
    }
  }
}

@mixin activity-tag(){
  div.activity-tag {
    display: inline-block;
    height: 26px;
    border-radius: 100px;
    @include avenir_B();
    font-size: 12px;
    color: $carrot_light_gray_3;
    background-color: $carrot_light_gray_7;
    line-height: 14px;
    text-align: center;
    padding: 7px 11px;
    cursor: pointer;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 100%;
    margin-left: 3px;

    &.on-gray {
      &:hover, &:active, &:focus, &.active {
        background-color: $carrot_purple;
        color: white;
        cursor: pointer;

        &.board-tag {
          background-color: $carrot_text_blue_3;
          color: white;
          cursor: pointer;
        }
      }
    }

    &:hover, &:active, &:focus, &.active {
      background-color: $carrot_light_purple;
      color: $carrot_purple;
      cursor: pointer;

      &.board-tag {
        color: $carrot_text_blue_3;
        background-color: $carrot_light_blue_2;
        cursor: pointer;
      }
    }
  }
}

@mixin activity-title(){
  @include avenir_H();
  font-size: 24px;
  color: $carrot_dark_gray_1;

  .emojione {
    @include emoji-size(22);
  }
}

@mixin activity-headline(){
  @include avenir_H();
  font-size: 20px;
  color: $carrot_dark_gray;

  .emojione {
    @include emoji-size(18);
  }
}

@mixin activity-body($font-size: 16){

  &.uploading[contenteditable=true]{
    .rangySelectionBoundary {
      display: inline-block !important;
      width: 32px;
      height: 32px;
      background-image: cdnUrl("/img/small_loading.gif");
      background-position: center;
      background-repeat: no-repeat;
      background-size: 32px 32px;
      top: -16px;
      position: relative;
    }
  }

  &.medium-editor-placeholder-hidden:after {
    display: none !important;
  }

  &.medium-editor-placeholder:after {
    @include avenir_R();
    font-size: #{$font-size}px;
    color: $carrot_light_gray_1;
    font-style: none !important;
  }

  @include avenir_R();
  font-size: #{$font-size}px;
  color: $deep_navy;
  white-space: pre-wrap;
  word-wrap: break-word;

  * {
    color: $deep_navy;
  }

  & > *:not(:last-child) {
    margin: #{$bottom_margin}px 0px;
  }

  b, strong{
    @include avenir_BOOK();
    color: $deep_navy;
    font-weight: 700;
  }

  h2:first-child {
    margin-top: 0px;
  }

  h2:not(:first-child) {
    margin-top: #{$bottom_margin + $h2_top_margin}px;
  }

  h2 {
    @include avenir_H();
    font-size: #{$font-size + 3}px;

    .emojione {
      @include emoji-size($font-size + 1);
    }
  }

  a, span[data-auto-link] {
    text-decoration: none;
    color: $carrot_text_blue;
  }

  a:hover {
    text-decoration: underline;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  .emojione {
    @include emoji-size($font-size - 2);
  }

  p:last-child, & > div:last-child {
    margin-bottom: 0px;
    padding-bottom: 0px;
  }

  hr.media-divider-line {
    display: inline-block;
    position: relative;
    width: 60px;
    left: 50%;
    margin-left: -30px;
    height: 1px;
    background-color: $deep_navy;
    margin-top: 0px;
    margin-bottom: 0px;
  }
}

@mixin activity-attachment($hide-remove-button: false){
  a.media-attachment {
    display: inline-block;
    width: 100%;
    height: 56px;
    padding: 13px 16px;
    background-color: #F0EFEA;
    border-radius: 4px;
    margin-top: 4px;

    & > * {
      opacity: 0.8;
      cursor: pointer;
    }

    &:hover {
      & > * {
        opacity: 1;
      }

      label.media-attachment-title {
        text-decoration: underline;
      }
      @if $hide-remove-button == true {
        button.remove-attachment {
          display: block;
        }
      }
    }

    i.file-mimetype {
      width: 30px;
      height: 30px;
      background-color: white;
      border-radius: 15px;
      color: $oc_gray_5;
      float: left;
      font-size: 16px;
      padding: 7px 9px;
      margin-top: -2px;
    }

    label {
      float: left;
      width: calc(100% - 30px - 30px);
      height: 20px;
      margin-bottom: 0;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    label.media-attachment-title {
      font-size: 13px;
      @include avenir_H();
      color: $carrot_dark_gray;
      margin-left: 8px;
    }

    label.media-attachment-subtitle {
      font-size: 12px;
      @include avenir_R();
      color: rgba($oc_gray_7, 0.5);
      margin-left: 8px;
    }

    button.remove-attachment {
      float: right;
      width: 25px;
      height: 25px;
      margin: -35px 0 0 0;
      padding: 0;
      color: $oc_gray_5;
      display: none;
    }
  }
}

@mixin activity-media-preview(){
  div.media-preview-container {
    width: 72px;
    height: 72px;
    float: right;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    background-position: 50%;
    background-size: cover;
    border-radius: 4px;
    position: relative;
    cursor: pointer;

    img {
      max-width: 72px;
      max-height: 54px;
      margin-top: 9px;
    }

    &:after {
      position: absolute;
      font-family: FontAwesome;
      font-size: 20px;
      color: white;
      opacity: 0.5;
      top: 50%;
      left: 50%;
    }

    &:hover {
      &:after {
        opacity: 0.8;
      }
    }

    &.video {
      &:after {
        content: "\f04b";
        margin-left: -8px;
        margin-top: -14px;
      }
    }
  }
}

